--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <article>
     <h2>Vlog: GEOINT Explained</h2>
     <iframe width="560" height="315"
-      src="https://www.youtube.com/embed/VIDEO_ID"
+      src="https://www.youtube.com/embed/XEmIlyJmVQo"
       allowfullscreen></iframe>
   </article>
 </main>
