--- a/index.html
+++ b/index.html
@@ -2,109 +2,88 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Vyuha Intelligence</title>
+  <title>Vyuha Intelligence | OSINT Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Font Awesome Icons -->
+  <!-- Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
-  <!-- CSS -->
+  <!-- Leaflet Map -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
 
-  <!-- NAVBAR -->
-  <header>
-    <div class="logo">
-      <i class="fa-solid fa-shield-halved"></i> VyuhaInt
+<body class="dark">
+
+<header>
+  <div class="logo">
+    <i class="fa-solid fa-shield-halved"></i> VyuhaInt
+  </div>
+
+  <nav>
+    <a href="#dashboard">Dashboard</a>
+    <a href="#map">World Intel</a>
+    <a href="#video">Explainer</a>
+
+    <button class="theme-toggle" onclick="toggleTheme()">
+      <i class="fa-solid fa-moon"></i>
+    </button>
+  </nav>
+</header>
+
+<!-- DASHBOARD -->
+<section id="dashboard" class="dashboard">
+  <h1>OSINT Intelligence Dashboard</h1>
+
+  <div class="stats">
+    <div class="stat-card">
+      <i class="fa-solid fa-user-secret"></i>
+      <h2>1,248</h2>
+      <p>Digital Profiles Tracked</p>
     </div>
 
-    <nav>
-      <a href="#home">Home</a>
-      <a href="#about">About</a>
-      <a href="#services">Services</a>
-
-      <!-- DROPDOWN -->
-      <div class="dropdown">
-        <button class="dropbtn">
-          Contact <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-          <a href="mailto:contact@vyuhaint.com">
-            <i class="fa-solid fa-envelope"></i> Email
-          </a>
-          <a href="tel:+919999999999">
-            <i class="fa-solid fa-phone"></i> Phone
-          </a>
-          <a href="#">
-            <i class="fa-brands fa-linkedin"></i> LinkedIn
-          </a>
-          <a href="#">
-            <i class="fa-brands fa-x-twitter"></i> Twitter (X)
-          </a>
-        </div>
-      </div>
-    </nav>
-  </header>
-
-  <!-- HERO -->
-  <section class="hero" id="home">
-    <div class="hero-text">
-      <h1>Open-Source Intelligence <span>Reimagined</span></h1>
-      <p>
-        Discover how digital footprints, public data, and OSINT techniques
-        empower modern intelligence gathering.
-      </p>
-      <button onclick="scrollToVideo()">Watch Demo</button>
+    <div class="stat-card">
+      <i class="fa-solid fa-globe"></i>
+      <h2>67</h2>
+      <p>Countries Observed</p>
     </div>
-  </section>
 
-  <!-- VIDEO SECTION -->
-  <section class="video-section" id="video">
-    <h2>OSINT Explained</h2>
-    <div class="video-container">
-      <iframe
-        src="https://www.youtube.com/embed/XEmIlyJmVQo"
-        allowfullscreen>
-      </iframe>
+    <div class="stat-card">
+      <i class="fa-solid fa-database"></i>
+      <h2>9.3 TB</h2>
+      <p>Public Data Indexed</p>
     </div>
-  </section>
 
-  <!-- SERVICES -->
-  <section class="services" id="services">
-    <h2>What We Do</h2>
-
-    <div class="cards">
-      <div class="card">
-        <i class="fa-solid fa-user-secret"></i>
-        <h3>Digital Footprint Analysis</h3>
-        <p>Track public data trails across platforms legally and ethically.</p>
-      </div>
-
-      <div class="card">
-        <i class="fa-solid fa-globe"></i>
-        <h3>Deep & Dark Web</h3>
-        <p>Understand what exists beyond search engines — safely.</p>
-      </div>
-
-      <div class="card">
-        <i class="fa-solid fa-video"></i>
-        <h3>Surveillance Awareness</h3>
-        <p>Learn how CCTV, metadata, and sensors impact privacy.</p>
-      </div>
+    <div class="stat-card alert">
+      <i class="fa-solid fa-triangle-exclamation"></i>
+      <h2>14</h2>
+      <p>Active Intelligence Alerts</p>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- FOOTER -->
-  <footer>
-    <p>© 2026 Vyuha Intelligence. All rights reserved.</p>
-    <div class="socials">
-      <i class="fa-brands fa-linkedin"></i>
-      <i class="fa-brands fa-github"></i>
-      <i class="fa-brands fa-x-twitter"></i>
-    </div>
-  </footer>
+<!-- MAP -->
+<section id="map" class="map-section">
+  <h2>🌍 World Intelligence Heatmap</h2>
+  <div id="worldMap"></div>
+</section>
 
-  <script src="script.js"></script>
+<!-- VIDEO -->
+<section id="video" class="video-section">
+  <h2>OSINT Explained</h2>
+  <iframe
+    src="https://www.youtube.com/embed/XEmIlyJmVQo"
+    allowfullscreen>
+  </iframe>
+</section>
+
+<footer>
+  <p>© 2026 Vyuha Intelligence</p>
+</footer>
+
+<!-- Scripts -->
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
